Feat: Cursed wasm test (not working)

--- a/src/jsMain/resources/index.html
+++ b/src/jsMain/resources/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Magic Matrix</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <script type="module" src="load.mjs"></script>
     <style>
         html {
             height: 100%;
